0031601: Modeling Algorithms - BRepOffset_Tool Segmentation Fault

Added protection against null pointer dereferencing.
Modified BRepOffset_MakeOffset::MakeThickSolid method.
Fixed the problem with negative volume values.
Fixed several unit tests and added a new one.